--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ body {
     justify-content: center;
     margin: 0;
     min-height: 100vh;
+    background: #191970;
+    color: white;
+;
 }
 
 .star {
@@ -34,6 +37,7 @@ body {
     </style>
 </head>
 <body>
+    <h2>Falling Star Animation</h2>
     
     <script src="main.js">
     </script>
